--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "b": "webpack --mode production"
   },
   "dependencies": {
-    "preact": "^10.6.2"
+    "preact": "10.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
